--- a/service/service_msm/src/main/resources/application.properties
+++ b/service/service_msm/src/main/resources/application.properties
@@ -1,30 +1,30 @@
-# ·þÎñ¶Ë¿Ú
+# ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 server.port=8204
-# ·þÎñÃû
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.application.name=service-msm
 
-#·µ»ØjsonµÄÈ«¾ÖÊ±¼ä¸ñÊ½
+#ï¿½ï¿½ï¿½ï¿½jsonï¿½ï¿½È«ï¿½ï¿½Ê±ï¿½ï¿½ï¿½Ê½
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.redis.host=192.168.44.165
+spring.redis.host=150.158.17.217
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
 spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
-#×î´ó×èÈûµÈ´ýÊ±¼ä(¸ºÊý±íÊ¾Ã»ÏÞÖÆ)
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ï¿½(ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
 
-# nacos·þÎñµØÖ·
+# nacosï¿½ï¿½ï¿½ï¿½ï¿½Ö·
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 aliyun.sms.regionId=default
 aliyun.sms.accessKeyId=LTAI4G4SV6WtST7UYH776b64
 aliyun.sms.secret=X9KHNYgztNr9MI5Zp8JffQPZO4uJo5
 
-#rabbitmqµØÖ·
+#rabbitmqï¿½ï¿½Ö·
 spring.rabbitmq.host=192.168.44.165
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
