--- a/service/service_hosp/src/main/resources/application.properties
+++ b/service/service_hosp/src/main/resources/application.properties
@@ -1,49 +1,49 @@
-# ·þÎñ¶Ë¿Ú
+# ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 server.port=8201
-# ·þÎñÃû
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.application.name=service-hosp
 
-# »·¾³ÉèÖÃ£ºdev¡¢test¡¢prod
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã£ï¿½devï¿½ï¿½testï¿½ï¿½prod
 spring.profiles.active=dev
 
-# mysqlÊý¾Ý¿âÁ¬½Ó
+# mysqlï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.44.165:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://150.158.17.217:3306/yygh_hosp?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.password=123456
 
-#·µ»ØjsonµÄÈ«¾ÖÊ±¼ä¸ñÊ½
+#ï¿½ï¿½ï¿½ï¿½jsonï¿½ï¿½È«ï¿½ï¿½Ê±ï¿½ï¿½ï¿½Ê½
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.data.mongodb.uri=mongodb://192.168.44.165:27017/yygh_hosp
+spring.data.mongodb.uri=mongodb://150.158.17.217:27017/yygh_hosp
 
-# nacos·þÎñµØÖ·
+# nacosï¿½ï¿½ï¿½ï¿½ï¿½Ö·
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#rabbitmqµØÖ·
+#rabbitmqï¿½ï¿½Ö·
 spring.rabbitmq.host=192.168.44.165
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-#ÅäÖÃmapper xmlÎÄ¼þµÄÂ·¾¶
+#ï¿½ï¿½ï¿½ï¿½mapper xmlï¿½Ä¼ï¿½ï¿½ï¿½Â·ï¿½ï¿½
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
 #mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/mapper/xml/*.xml
-# nacos·þÎñµØÖ·
+# nacosï¿½ï¿½ï¿½ï¿½ï¿½Ö·
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#¿ªÆôsentinel
+#ï¿½ï¿½ï¿½ï¿½sentinel
 #feign.sentinel.enabled=true
-#ÉèÖÃsentinelµØÖ·
+#ï¿½ï¿½ï¿½ï¿½sentinelï¿½ï¿½Ö·
 #spring.cloud.sentinel.transport.dashboard=http://127.0.0.1:8858
 
-#mongodbµØÖ·
+#mongodbï¿½ï¿½Ö·
 #spring.data.mongodb.host=192.168.44.163
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=yygh_hosp
 
-#rabbitmqµØÖ·
+#rabbitmqï¿½ï¿½Ö·
 #spring.rabbitmq.host=127.0.0.1
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
