--- a/service/service_task/src/main/resources/application.properties
+++ b/service/service_task/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-# ·þÎñ¶Ë¿Ú
+# ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 server.port=8207
-# ·þÎñÃû
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 spring.application.name=service-task
-# »·¾³ÉèÖÃ£ºdev¡¢test¡¢prod
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ã£ï¿½devï¿½ï¿½testï¿½ï¿½prod
 spring.profiles.active=dev
 
-# nacos·þÎñµØÖ·
+# nacosï¿½ï¿½ï¿½ï¿½ï¿½Ö·
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
-#rabbitmqµØÖ·
-spring.rabbitmq.host=192.168.44.165
+#rabbitmqï¿½ï¿½Ö·
+spring.rabbitmq.host=150.158.17.217
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
