--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study?characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123456
+    password: root
 #####  swagger文档部分配置 ####
 swagger:
   # 生产环境改为false（改为false后swagger-ui.html则无法访问）
